Open location website in new tab, fix rel placement, use better alignment for fa icon

--- a/static/scss/_icons.scss
+++ b/static/scss/_icons.scss
@@ -39,3 +39,7 @@
 .fa-ayrabo-gray {
   color: $ess-gray;
 }
+
+.fa-align-middle {
+  vertical-align: middle;
+}
